--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     ],
     "require": {
         "moneyphp/money": "^4.5",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "fakerphp/faker": "^1.23"
     }
 }
